...
                      backgroundColor: Theme.of(context).primaryColor,
                    ),
                    onPressed: () {
                      _cropController.crop();
                    },
                    child: Text(
                      'Xong',
                      style: TextStyle(
                          color: Theme.of(context).colorScheme.onPrimary),
                    ),
                  )
                ],
              ),
...
