...
        Category('Bảo hiểm', 0, 0, 'expense', 'user',
            icon: 'insurance', color: Colors.green),
        Category('Phí dịch vụ', 0, 0, 'expense', 'user',
            icon: 'service', color: Colors.orange),
        Category('Chi phí khác', 0, 0, 'expense', 'user',
            icon: 'other', color: Colors.grey),
        Category('Lương', 0, 0, 'income', 'user',
            icon: 'salary', color: Colors.green),
        Category('Thưởng', 0, 0, 'income', 'user',
            icon: 'bonus', color: Colors.orange),
        Category('Tiền lãi', 0, 0, 'income', 'user',
            icon: 'interest', color: Colors.blue),
        Category('Bán đồ', 0, 0, 'income', 'user',
...
